--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.30.0",
         "bootstrap": "^4.5.0",
+        "copy-webpack-plugin": "4",
         "core-js": "^3.0.0",
         "jquery": "^3.5.1",
         "node-sass": "^4.14.1",
@@ -19,4 +20,3 @@
         "build": "encore production --progress"
     }
 }
-
